test/files/neg/macro-invalidusage-badtargs-c.check
Macros_Test_2.scala:7: error: String takes no type parameters, expected: one
  val s: String = foo[String](42)
                      ^
one error found
